--- a/common-model/Dockerfile
+++ b/common-model/Dockerfile
@@ -1,4 +1,4 @@
 FROM openjdk:17
 VOLUME /tmp
-ADD target/common-model-0.0.1.jar common-model-0.0.1.jar
+ADD /home/mohs/.jenkins/workspace/onlineexam/common-model/target/common-model.jar common-model-0.0.1.jar
 ENTRYPOINT [ "java","-jar","/common-model-0.0.1.jar" ]
